src/QRest.Semantics.OData/G4Generated/ODataGrammarParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from ODataGrammar.g4 by ANTLR 4.7.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.1")]
[System.CLSCompliant(false)]
public partial class ODataGrammarParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, EQPARAM=9, 
		DOLLAR=10, AMPERSAND=11, COMMA=12, SQ=13, AND=14, OR=15, NOT=16, TRUE=17, 
		FALSE=18, GT=19, GE=20, LT=21, LE=22, EQ=23, NE=24, LPAREN=25, RPAREN=26, 
		LQPAREN=27, RQPAREN=28, DECIMAL=29, INT=30, IDENTIFIER=31, STRINGLITERAL=32, 
		WS=33;
	public const int
		RULE_parse = 0, RULE_queryOptions = 1, RULE_queryOption = 2, RULE_filter = 3, 
		RULE_select = 4, RULE_selectItem = 5, RULE_count = 6, RULE_orderby = 7, 
		RULE_orderbyItem = 8, RULE_order = 9, RULE_top = 10, RULE_skip = 11, RULE_expression = 12, 
		RULE_comparator = 13, RULE_binary = 14, RULE_bool = 15, RULE_functionParams = 16;
	public static readonly string[] ruleNames = {
		"parse", "queryOptions", "queryOption", "filter", "select", "selectItem", 
		"count", "orderby", "orderbyItem", "order", "top", "skip", "expression", 
		"comparator", "binary", "bool", "functionParams"
	};

	private static readonly string[] _LiteralNames = {
		null, "'filter'", "'select'", "'count'", "'orderby'", "'asc'", "'desc'", 
		"'top'", "'skip'", "'='", "'$'", "'&'", "','", "'''", null, null, null, 
		null, null, null, null, null, null, null, null, "'('", "')'", "'['", "']'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, "EQPARAM", "DOLLAR", 
		"AMPERSAND", "COMMA", "SQ", "AND", "OR", "NOT", "TRUE", "FALSE", "GT", 
		"GE", "LT", "LE", "EQ", "NE", "LPAREN", "RPAREN", "LQPAREN", "RQPAREN", 
		"DECIMAL", "INT", "IDENTIFIER", "STRINGLITERAL", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ODataGrammar.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static ODataGrammarParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public ODataGrammarParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public ODataGrammarParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class ParseContext : ParserRuleContext {
		public QueryOptionsContext queryOptions() {
			return GetRuleContext<QueryOptionsContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(ODataGrammarParser.Eof, 0); }
		public ParseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_parse; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IODataGrammarVisitor<TResult> typedVisitor = visitor as IODataGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParse(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ParseContext parse() {
		ParseContext _localctx = new ParseContext(Context, State);
		EnterRule(_localctx, 0, RULE_parse);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 34; queryOptions();
			State = 35; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QueryOptionsContext : ParserRuleContext {
		public QueryOptionContext[] queryOption() {
			return GetRuleContexts<QueryOptionContext>();
		}
		public QueryOptionContext queryOption(int i) {
			return GetRuleContext<QueryOptionContext>(i);
		}
		public ITerminalNode[] AMPERSAND() { return GetTokens(ODataGrammarParser.AMPERSAND); }
		public ITerminalNode AMPERSAND(int i) {
			return GetToken(ODataGrammarParser.AMPERSAND, i);
		}
		public QueryOptionsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_queryOptions; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IODataGrammarVisitor<TResult> typedVisitor = visitor as IODataGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQueryOptions(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QueryOptionsContext queryOptions() {
		QueryOptionsContext _localctx = new QueryOptionsContext(Context, State);
		EnterRule(_localctx, 2, RULE_queryOptions);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 37; queryOption();
			State = 42;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==AMPERSAND) {
				{
				{
				State = 38; Match(AMPERSAND);
				State = 39; queryOption();
				}
				}
				State = 44;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class QueryOptionContext : ParserRuleContext {
		public FilterContext filter() {
			return GetRuleContext<FilterContext>(0);
		}
		public SelectContext select() {
			return GetRuleContext<SelectContext>(0);
		}
		public CountContext count() {
			return GetRuleContext<CountContext>(0);
		}
		public OrderbyContext orderby() {
			return GetRuleContext<OrderbyContext>(0);
		}
		public TopContext top() {
			return GetRuleContext<TopContext>(0);
		}
		public SkipContext skip() {
			return GetRuleContext<SkipContext>(0);
		}
		public QueryOptionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_queryOption; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IODataGrammarVisitor<TResult> typedVisitor = visitor as IODataGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQueryOption(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QueryOptionContext queryOption() {
		QueryOptionContext _localctx = new QueryOptionContext(Context, State);
		EnterRule(_localctx, 4, RULE_queryOption);
		try {
			State = 51;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 45; filter();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 46; select();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 47; count();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 48; orderby();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 49; top();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 50; skip();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FilterContext : ParserRuleContext {
		public ExpressionContext filterexpr;
		public ITerminalNode DOLLAR() { return GetToken(ODataGrammarParser.DOLLAR, 0); }
		public ITerminalNode EQPARAM() { return GetToken(ODataGrammarParser.EQPARAM, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public FilterContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_filter; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IODataGrammarVisitor<TResult> typedVisitor = visitor as IODataGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFilter(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FilterContext filter() {
		FilterContext _localctx = new FilterContext(Context, State);
		EnterRule(_localctx, 6, RULE_filter);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 53; Match(DOLLAR);
			State = 54; Match(T__0);
			State = 55; Match(EQPARAM);
			State = 56; _localctx.filterexpr = expression(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SelectContext : ParserRuleContext {
		public ITerminalNode DOLLAR() { return GetToken(ODataGrammarParser.DOLLAR, 0); }
		public ITerminalNode EQPARAM() { return GetToken(ODataGrammarParser.EQPARAM, 0); }
		public SelectItemContext[] selectItem() {
			return GetRuleContexts<SelectItemContext>();
		}
		public SelectItemContext selectItem(int i) {
			return GetRuleContext<SelectItemContext>(i);
		}
		public ITerminalNode[] COMMA() { return GetTokens(ODataGrammarParser.COMMA); }
		public ITerminalNode COMMA(int i) {
			return GetToken(ODataGrammarParser.COMMA, i);
		}
		public SelectContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_select; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IODataGrammarVisitor<TResult> typedVisitor = visitor as IODataGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSelect(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SelectContext select() {
		SelectContext _localctx = new SelectContext(Context, State);
		EnterRule(_localctx, 8, RULE_select);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 58; Match(DOLLAR);
			State = 59; Match(T__1);
			State = 60; Match(EQPARAM);
			State = 61; selectItem();
			State = 66;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==COMMA) {
				{
				{
				State = 62; Match(COMMA);
				State = 63; selectItem();
				}
				}
				State = 68;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SelectItemContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(ODataGrammarParser.IDENTIFIER, 0); }
		public SelectItemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_selectItem; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IODataGrammarVisitor<TResult> typedVisitor = visitor as IODataGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSelectItem(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SelectItemContext selectItem() {
		SelectItemContext _localctx = new SelectItemContext(Context, State);
		EnterRule(_localctx, 10, RULE_selectItem);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 69; Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CountContext : ParserRuleContext {
		public BoolContext decexpr;
		public ITerminalNode DOLLAR() { return GetToken(ODataGrammarParser.DOLLAR, 0); }
		public ITerminalNode EQPARAM() { return GetToken(ODataGrammarParser.EQPARAM, 0); }
		public BoolContext @bool() {
			return GetRuleContext<BoolContext>(0);
		}
		public CountContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_count; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IODataGrammarVisitor<TResult> typedVisitor = visitor as IODataGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCount(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CountContext count() {
		CountContext _localctx = new CountContext(Context, State);
		EnterRule(_localctx, 12, RULE_count);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 71; Match(DOLLAR);
			State = 72; Match(T__2);
			State = 73; Match(EQPARAM);
			State = 74; _localctx.decexpr = @bool();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OrderbyContext : ParserRuleContext {
		public ITerminalNode DOLLAR() { return GetToken(ODataGrammarParser.DOLLAR, 0); }
		public ITerminalNode EQPARAM() { return GetToken(ODataGrammarParser.EQPARAM, 0); }
		public OrderbyItemContext[] orderbyItem() {
			return GetRuleContexts<OrderbyItemContext>();
		}
		public OrderbyItemContext orderbyItem(int i) {
			return GetRuleContext<OrderbyItemContext>(i);
		}
		public ITerminalNode COMMA() { return GetToken(ODataGrammarParser.COMMA, 0); }
		public OrderbyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_orderby; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IODataGrammarVisitor<TResult> typedVisitor = visitor as IODataGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOrderby(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OrderbyContext orderby() {
		OrderbyContext _localctx = new OrderbyContext(Context, State);
		EnterRule(_localctx, 14, RULE_orderby);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 76; Match(DOLLAR);
			State = 77; Match(T__3);
			State = 78; Match(EQPARAM);
			State = 79; orderbyItem();
			{
			State = 80; Match(COMMA);
			State = 81; orderbyItem();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OrderbyItemContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(ODataGrammarParser.IDENTIFIER, 0); }
		public OrderContext order() {
			return GetRuleContext<OrderContext>(0);
		}
		public OrderbyItemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_orderbyItem; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IODataGrammarVisitor<TResult> typedVisitor = visitor as IODataGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOrderbyItem(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OrderbyItemContext orderbyItem() {
		OrderbyItemContext _localctx = new OrderbyItemContext(Context, State);
		EnterRule(_localctx, 16, RULE_orderbyItem);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83; Match(IDENTIFIER);
			State = 85;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==T__4 || _la==T__5) {
				{
				State = 84; order();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OrderContext : ParserRuleContext {
		public OrderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_order; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IODataGrammarVisitor<TResult> typedVisitor = visitor as IODataGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOrder(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OrderContext order() {
		OrderContext _localctx = new OrderContext(Context, State);
		EnterRule(_localctx, 18, RULE_order);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 87;
			_la = TokenStream.LA(1);
			if ( !(_la==T__4 || _la==T__5) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TopContext : ParserRuleContext {
		public ITerminalNode DOLLAR() { return GetToken(ODataGrammarParser.DOLLAR, 0); }
		public ITerminalNode EQPARAM() { return GetToken(ODataGrammarParser.EQPARAM, 0); }
		public ITerminalNode INT() { return GetToken(ODataGrammarParser.INT, 0); }
		public TopContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_top; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IODataGrammarVisitor<TResult> typedVisitor = visitor as IODataGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTop(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TopContext top() {
		TopContext _localctx = new TopContext(Context, State);
		EnterRule(_localctx, 20, RULE_top);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 89; Match(DOLLAR);
			State = 90; Match(T__6);
			State = 91; Match(EQPARAM);
			State = 92; Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SkipContext : ParserRuleContext {
		public ITerminalNode DOLLAR() { return GetToken(ODataGrammarParser.DOLLAR, 0); }
		public ITerminalNode EQPARAM() { return GetToken(ODataGrammarParser.EQPARAM, 0); }
		public ITerminalNode INT() { return GetToken(ODataGrammarParser.INT, 0); }
		public SkipContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_skip; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IODataGrammarVisitor<TResult> typedVisitor = visitor as IODataGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSkip(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SkipContext skip() {
		SkipContext _localctx = new SkipContext(Context, State);
		EnterRule(_localctx, 22, RULE_skip);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94; Match(DOLLAR);
			State = 95; Match(T__7);
			State = 96; Match(EQPARAM);
			State = 97; Match(INT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExpressionContext : ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expression; } }
	 
		public ExpressionContext() { }
		public virtual void CopyFrom(ExpressionContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class BinaryExpressionContext : ExpressionContext {
		public ExpressionContext left;
		public BinaryContext op;
		public ExpressionContext right;
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public BinaryContext binary() {
			return GetRuleContext<BinaryContext>(0);
		}
		public BinaryExpressionContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IODataGrammarVisitor<TResult> typedVisitor = visitor as IODataGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBinaryExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class DecimalExpressionContext : ExpressionContext {
		public ITerminalNode DECIMAL() { return GetToken(ODataGrammarParser.DECIMAL, 0); }
		public DecimalExpressionContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IODataGrammarVisitor<TResult> typedVisitor = visitor as IODataGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDecimalExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class StringExpressionContext : ExpressionContext {
		public ITerminalNode STRINGLITERAL() { return GetToken(ODataGrammarParser.STRINGLITERAL, 0); }
		public StringExpressionContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IODataGrammarVisitor<TResult> typedVisitor = visitor as IODataGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStringExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class BoolExpressionContext : ExpressionContext {
		public BoolContext @bool() {
			return GetRuleContext<BoolContext>(0);
		}
		public BoolExpressionContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IODataGrammarVisitor<TResult> typedVisitor = visitor as IODataGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBoolExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IntExpressionContext : ExpressionContext {
		public ITerminalNode INT() { return GetToken(ODataGrammarParser.INT, 0); }
		public IntExpressionContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IODataGrammarVisitor<TResult> typedVisitor = visitor as IODataGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIntExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class IdentifierExpressionContext : ExpressionContext {
		public ITerminalNode IDENTIFIER() { return GetToken(ODataGrammarParser.IDENTIFIER, 0); }
		public IdentifierExpressionContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IODataGrammarVisitor<TResult> typedVisitor = visitor as IODataGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIdentifierExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NotExpressionContext : ExpressionContext {
		public ITerminalNode NOT() { return GetToken(ODataGrammarParser.NOT, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public NotExpressionContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IODataGrammarVisitor<TResult> typedVisitor = visitor as IODataGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNotExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ParenExpressionContext : ExpressionContext {
		public ITerminalNode LPAREN() { return GetToken(ODataGrammarParser.LPAREN, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(ODataGrammarParser.RPAREN, 0); }
		public ParenExpressionContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IODataGrammarVisitor<TResult> typedVisitor = visitor as IODataGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitParenExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class ComparatorExpressionContext : ExpressionContext {
		public ExpressionContext left;
		public ComparatorContext op;
		public ExpressionContext right;
		public ExpressionContext[] expression() {
			return GetRuleContexts<ExpressionContext>();
		}
		public ExpressionContext expression(int i) {
			return GetRuleContext<ExpressionContext>(i);
		}
		public ComparatorContext comparator() {
			return GetRuleContext<ComparatorContext>(0);
		}
		public ComparatorExpressionContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IODataGrammarVisitor<TResult> typedVisitor = visitor as IODataGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitComparatorExpression(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class FuncCallExpressionContext : ExpressionContext {
		public IToken func;
		public ITerminalNode LPAREN() { return GetToken(ODataGrammarParser.LPAREN, 0); }
		public FunctionParamsContext functionParams() {
			return GetRuleContext<FunctionParamsContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(ODataGrammarParser.RPAREN, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(ODataGrammarParser.IDENTIFIER, 0); }
		public FuncCallExpressionContext(ExpressionContext context) { CopyFrom(context); }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IODataGrammarVisitor<TResult> typedVisitor = visitor as IODataGrammarVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFuncCallExpression(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExpressionContext expression() {
		return expression(0);
	}
